tomcat-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tomcat-service
spec:
  type: NodePort

  selector:
    app: tomcat
  ports:
  - protocol: TCP	
    nodePort: 30163
    port: 80
    targetPort: 8080
